fixed CSS and image size to wrap

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -16,7 +16,7 @@ h2 {
 }
 
 img {
-    align-items: flex-start;
+    float: left;
 }
 
 @media all and (max-width: 980px) {
